Update thesis presentation

--- a/index.html
+++ b/index.html
@@ -21,12 +21,21 @@
       </span>
     </div>
   </div>
+  <div class="thesis">
+    <h1>Count down to <span style="font-size: 1.25em">Thesis</span> presentation</h1>
+    <div class="count-block">
+      <span id="count-thesis">DD HH MM SS</span>
+      <span id="date-format">
+        DD &nbsp;&nbsp;&nbsp;&nbsp; HH &nbsp;&nbsp;&nbsp;&nbsp; MM &nbsp;&nbsp;&nbsp;&nbsp; SS
+      </span>
+    </div>
+  </div>
   <div class="presentation">
     <h1>Count down to <span style="color: red; font-size: 1.25em">Final</span> presentation</h1>
     <div class="count-block">
       <span id="count-presentation">DD HH MM SS</span>
       <span id="date-format">
-          DD &nbsp;&nbsp;&nbsp;&nbsp; HH &nbsp;&nbsp;&nbsp;&nbsp; MM &nbsp;&nbsp;&nbsp;&nbsp; SS
+        DD &nbsp;&nbsp;&nbsp;&nbsp; HH &nbsp;&nbsp;&nbsp;&nbsp; MM &nbsp;&nbsp;&nbsp;&nbsp; SS
       </span>
     </div>
   </div>
